Fix jump to link

--- a/styles/theme/_layout.scss
+++ b/styles/theme/_layout.scss
@@ -110,7 +110,7 @@
 .mobile-jump-top {
     display: block;
     opacity: 0;
-    pointer-events: auto;
+    pointer-events: none;
     z-index: 1000;
     position: fixed;
     bottom: 0;
@@ -123,9 +123,13 @@
     color: #fff;
     transition: opacity 0.6s;
     &:hover {
-        opacity: 1;
+        opacity: 0;
+    }
+    @include tablet() {
+        display: none;
     }
 }
 .scrolled .mobile-jump-top {
     opacity: 1;
+    pointer-events: auto;
 }
